--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@html-eslint/eslint-plugin": "^0.37.0",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
@@ -21,16 +22,9 @@
     "tailwindcss": "^3.4.17"
   },
   "lint-staged": {
-
-"*.{js,jsx,ts,tsx,html,css}": [
-
-"prettier --write",
-
-"eslint --fix"
-
-]
-
-}
-
-
+    "*.{js,jsx,ts,tsx,html,css}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  }
 }
